<resources>
    <string name="app_name">Video Player</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_folders">Folders</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_slideshow">Slide</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_folder">Folder</string>
    <string name="title_playlist">Playlist</string>

</resources>