<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/play"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/folder"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/playlist_add"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/playlist_add"
            android:title="@string/title_playlist" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/info"
            android:title="@string/menu_privacy_policy" />
    </group>
</menu>